avoid cutting off top of toolbar item focus state, accout for ref changing

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -349,8 +349,8 @@
   content: "";
   display: block;
   position: absolute;
-  top: calc(-1 * var(--space-base));
-  right: var(--space-base);
+  top: calc(-1.25 * var(--space-base));
+  right: 0;
   left: 0;
   z-index: 2;
   height: var(--space-base);
